# payard-app

./: .gitignore  Caddyfile  MODULE_SUMMARY.md  Makefile  README.md  compose.yaml  docker-compose.dev.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/apps/accounts/: models.py  serializers.py  views.py
backend/apps/advances/: apps.py  models.py  serializers.py  services.py  views.py
backend/apps/attendance/: models.py  serializers.py  services.py  views.py
backend/apps/compliance/: models.py  serializers.py  tasks.py  views.py
backend/apps/core/: apps.py  authentication.py  checks.py  context.py  exceptions.py  fields.py  logging.py  middleware.py  models.py  permissions.py  schema.py  scoping.py  serializers.py  services.py  views.py  viewsets.py
backend/apps/disputes/: models.py  serializers.py  views.py
backend/apps/notifications/: authentication.py  models.py  serializers.py  services.py  tasks.py  views.py
backend/apps/organizations/: models.py  serializers.py  services.py  views.py
backend/apps/payroll/: models.py  reports.py  serializers.py  services.py  tasks.py  views.py
backend/apps/sites/: models.py  serializers.py  views.py
backend/apps/workforce/: models.py  portal.py  serializers.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  test.py
backend/tests/: conftest.py  test_advances_disputes.py  test_attendance.py  test_authentication.py  test_payroll_controls.py  test_production_readiness.py  test_staff_onboarding.py  test_tenant_security.py  test_worker_creation.py
(+64 files in other folders)
