[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "payyard-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2,<5.3",
  "djangorestframework>=3.15,<4",
  "djangorestframework-simplejwt>=5.4,<6",
  "django-cors-headers>=4.7,<5",
  "django-filter>=25.1,<26",
  "django-environ>=0.12,<1",
  "django-celery-beat>=2.8,<3",
  "drf-spectacular>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "celery>=5.5,<6",
  "redis>=6,<7",
  "cryptography>=45,<46",
  "firebase-admin>=6.8,<7",
  "httpx>=0.28,<1",
  "phonenumbers>=9,<10",
  "Pillow>=11,<12",
  "openpyxl>=3.1,<4",
  "reportlab>=4.4,<5",
  "gunicorn>=23,<24",
  "whitenoise>=6.9,<7",
  "django-storages[s3]>=1.14,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.11,<5",
  "pytest-cov>=6,<7",
  "factory-boy>=3.3,<4",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_tests.py"]
addopts = "-q --disable-warnings --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["DJ001"]
